Revert switch to Collections.emptyList() as that's immutable!